@@ -1,6 +1,8 @@
 Version 2.0.16 release (2014/09/24)
 -------------------------------------------
 
+Added postenquiryform action to ClassIS API.
+
 Changes button from transport only fetches bookings wiht direction
 OUT.
 
